Correct the code example to point to the right .map file

--- a/FuncGodot Manual/pages/tips_runtime_building.html
+++ b/FuncGodot Manual/pages/tips_runtime_building.html
@@ -26,7 +26,7 @@ func _ready():
     func_godot_map.connect("build_complete", _build_complete)
     func_godot_map.connect("build_failed", _build_failed)
     func_godot_map.connect("unwrap_uv2_complete", _unwrap_uv2_complete)
-    func_godot_map.local_map_file = "res://maps/runtime_building.map"
+    func_godot_map.local_map_file = "res://maps/example.map"
     func_godot_map.verify_and_build()
 
 # We need to wait for the build to finish before unwrapping mesh UV2s for lightmap baking.
