--- a/FuncGodot Manual/pages/ref_local_config.html
+++ b/FuncGodot Manual/pages/ref_local_config.html
@@ -39,6 +39,15 @@
                 <td>Button to save the local machine project configuration settings in your game's <i>user://</i> folder.</td>
             </tr>
             <tr>
+                <td>Reload Func Godot Settings</td>
+                <td>Bool</td>
+                <td>
+                    Button to reload the local machine project configuration settings in your game's <i>user://</i> folder. 
+                    This can be used in case you need to revert changes to the Local Config resource, so long as you have not 
+                    export your changes already.
+                </td>
+            </tr>
+            <tr>
                 <td>Fgd Output Folder</td>
                 <td>String, Global Directory</td>
                 <td>
