--- a/FuncGodot Manual/pages/ref_trenchbroom_resources.html
+++ b/FuncGodot Manual/pages/ref_trenchbroom_resources.html
@@ -62,6 +62,14 @@
                     Useful for hiding PBR maps and animation frames.
                 </td>
             </tr>
+            <tr>
+                <td>Palette Path</td>
+                <td>String</td>
+                <td>
+                    Palette path relative to your Game Path. Only needed for Quake WAD2 files. 
+                    Half-Life WAD3 files contain the palettes within the texture information.
+                </td>
+            </tr>
 
             <tr class="header"><td>Entities</td><td></td><td></td></tr>
             <tr>
