--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -27,7 +27,10 @@
         </p>
         <p class="sidenav"><a href="guide_textures.html" target="main">Textures</a><br></p>
         <p class="sidenav2">
+            <a href="guide_textures.html#HowTexWork" target="main">How Textures Work In FuncGodot</a><br>
+            <a href="guide_textures.html#AutomaticPBRGeneration" target="main">Automatic PBR Generation</a><br>
             <a href="guide_textures.html#ClipAndSkip" target="main">Clip and Skip</a><br>
+            <a href="guide_textures.html#Origin" target="main">The Origin Texture</a><br>
             <a href="guide_textures.html#WADFiles" target="main">WAD Files</a><br>
             <a href="guide_textures.html#WhyAreMyTexturesBlurry" target="main">Why Are My Textures Blurry!?</a>
         </p>
