--- a/FuncGodot Manual/pages/start.html
+++ b/FuncGodot Manual/pages/start.html
@@ -37,8 +37,8 @@
             Understanding this concept will hopefully put you on the right path forward to being able to use this wonderfully flexible tool to make some incredible games.
         </p>
         <p>
-            This manual assumes some familiarity with the Godot Engine and your map editor of choice. This manual will only cover them insofar as how they relate to 
-            the FuncGodot work flow.
+            This manual assumes an intermediate to advanced level of experience with the Godot Engine and your map editor of choice. This manual will only cover them insofar 
+            as how they relate to the FuncGodot work flow.
         </p>
         <br>
 
