Changed Preliminary Requirements to "Latest Version of Godot 4.x"
Here at FuncGodot we're always early adopters of the latest stable release of tools when we know about them.

--- a/FuncGodot Manual/pages/guide_install.html
+++ b/FuncGodot Manual/pages/guide_install.html
@@ -12,7 +12,7 @@
         <h3>Preliminary Requirements</h3>
 
         <p>
-            FuncGodot's official requirement is currently Godot 4.2. We will always aim to keep FuncGodot compatible with the latest Godot 4.x release. 
+            FuncGodot's official requirement is always the latest Godot 4.x release. 
             If you manage to make it work on an older release of Godot 4, awesome! But you're on your own if you run into issues.
         </p>
         <p>
