Feature and versioning update.

--- a/FuncGodot Manual/pages/ref_fgd_resources.html
+++ b/FuncGodot Manual/pages/ref_fgd_resources.html
@@ -113,6 +113,14 @@
                 <td>Map editor descriptions for the previously defined key value pair properties. Not required for added properties but recommended.</td>
             </tr>
             <tr>
+                <td>Auto Apply To Matching Node Properties</td>
+                <td>Bool</td>
+                <td>
+                    Automatically applies entity class properties to matching properties in the generated node. 
+                    When using this feature, class properties need to be the correct type or you may run into errors on map build.
+                </td>
+            </tr>
+            <tr>
                 <td>Meta Properties</td>
                 <td>Dictionary</td>
                 <td>
