--- a/FuncGodot Manual/pages/ref_func_godot_map.html
+++ b/FuncGodot Manual/pages/ref_func_godot_map.html
@@ -260,7 +260,7 @@
                 </td>
             </tr>
 
-            <tr><td>TrenchBroom</td><td></td><td></td></tr>
+            <tr class="header"><td>TrenchBroom</td><td></td><td></td></tr>
             <tr>
                 <td>Use Trenchbroom Groups Hierarchy</td>
                 <td>Bool</td>
