--- a/FuncGodot Manual/pages/start.html
+++ b/FuncGodot Manual/pages/start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>FuncGodot Manual</title>
+    <title>FuncGodot v2024.2 Manual</title>
     <link rel="icon" type="image/x-icon" href="../images/godot_ranger.svg">
     <link rel="stylesheet" href="../styles.css">
 </head>
