--- a/FuncGodot Manual/FuncGodot Manual.html
+++ b/FuncGodot Manual/FuncGodot Manual.html
@@ -3,7 +3,7 @@
 <head>
     <title>FuncGodot Manual</title>
     <link rel="icon" type="image/x-icon" href="images/godot_ranger.svg">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="pages/styles.css">
 </head>
 <iframe name="main" class="main" src="pages/start.html" height="100%"></iframe>
 <iframe name="sidenav" class="sidenav" src="pages/sidenav.html"></iframe>
