--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -3,10 +3,10 @@
 <head>
     <title>FuncGodot Manual</title>
     <link rel="icon" type="image/x-icon" href="../images/godot_ranger.svg">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class="sidenav">
+<body class="sidenav">
+    <div>
         <p class="sidenav"><a href="start.html" target="main">What <i>IS</i> FuncGodot?</a></p>
         <!--<p class="sidenav2"><a href="start.html#Credits" target="main">Who <i>MADE</i> FuncGodot?</a></p>-->
         <h3 class="sidenav">Getting Started</h3>
