--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>FuncGodot Manual</title>
         <link rel="icon" type="image/x-icon" href="FuncGodot Manual/images/godot_ranger.svg">
-        <link rel="stylesheet" href="FuncGodot Manual/styles.css">
+        <link rel="stylesheet" href="FuncGodot Manual/pages/styles.css">
         <meta http-equiv="refresh" content="0; FuncGodot Manual/FuncGodot Manual.html"/>
     </head>
 </html>
