--- a/FuncGodot Manual/pages/header.html
+++ b/FuncGodot Manual/pages/header.html
@@ -3,11 +3,11 @@
 <head>
     <title>FuncGodot Manual</title>
     <link rel="icon" type="image/x-icon" href="../images/godot_ranger.svg">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="header">
     <!-- Header Begin -->
-    <div class="header"><img src="../images/godot_ranger.svg" height="50px" alt=""><img src="../images/logo_white.png" height="40px" alt="FuncGodot"></div>
+    <div><img src="../images/godot_ranger.svg" height="50px" alt=""><img src="../images/logo_white.png" height="40px" alt="FuncGodot"></div>
     <!-- Header End -->
 </body>
 </html>
