--- a/FuncGodot Manual/pages/start.html
+++ b/FuncGodot Manual/pages/start.html
@@ -3,9 +3,9 @@
 <head>
     <title>FuncGodot v2024.2 Manual</title>
     <link rel="icon" type="image/x-icon" href="../images/godot_ranger.svg">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="main">
     <div class="main">
         <h1 style="text-align:center;"><img src="../images/godot_ranger.svg" alt="FuncGodot Ranger" height="128"><br>What <i>IS</i> FuncGodot?</h1>
         <p>
