Better Description of TrenchbroomGameConfig GameConfigVersion Variable
Sometimes Latest isn't latest when the latest TrenchBroom is released after the latest FuncGodot.

Currently the plugin is out of sync with TB, so adjusted to the description to cover more scenarios where you might want to change the version.

--- a/FuncGodot Manual/pages/ref_trenchbroom_resources.html
+++ b/FuncGodot Manual/pages/ref_trenchbroom_resources.html
@@ -114,7 +114,7 @@
                 <td>GameConfigVersion</td>
                 <td>
                     Game configuration format compatible with the version of TrenchBroom being used. 
-                    Only change if you're using an older version of TrenchBroom.
+                    Only change if you're having Game Config errors upon starting TrenchBroom.
                 </td>
             </tr>
         </table>
